--- a/index.html
+++ b/index.html
@@ -115,8 +115,69 @@
       transform: scale(1.2);
     }
 
-    .red-heart {
-      color: red;
+    .red-heart { color: red; }
+
+    /* World Clock Panel */
+    .clock-panel {
+      position: fixed;
+      top: 50%;
+      right: 0;
+      transform: translateY(-50%);
+      background: rgba(255,255,255,0.95);
+      border-radius: 20px 0 0 20px;
+      box-shadow: -5px 5px 20px rgba(0,0,0,0.2);
+      width: 260px;
+      padding: 15px;
+      transition: right 0.3s ease;
+      z-index: 999;
+    }
+
+    .clock-grid {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 15px;
+    }
+
+    .clock-card {
+      text-align: center;
+      background: rgba(255,255,255,0.9);
+      border-radius: 15px;
+      padding: 10px;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+    }
+
+    canvas {
+      width: 100px;
+      height: 100px;
+    }
+
+    .digital-time {
+      font-size: 14px;
+      font-weight: bold;
+      margin-top: 5px;
+    }
+
+    .toggle-btn {
+      position: absolute;
+      top: 10px;
+      left: -30px;
+      width: 30px;
+      height: 30px;
+      background: #0072ff;
+      color: #fff;
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+      box-shadow: 0 3px 10px rgba(0,0,0,0.2);
+      font-weight: bold;
+    }
+
+    @media(max-width: 768px){
+      .clock-grid { grid-template-columns: 1fr; }
+      .clock-panel { right: -230px; }
+      .clock-panel.open { right: 0; }
     }
   </style>
 </head>
@@ -143,6 +204,33 @@
     <div class="pip-info" id="pipInfo1"></div>
   </div>
 
+  <!-- Profit Calculator -->
+  <div class="container">
+    <h2>Profit Calculator</h2>
+    <label for="profitPair">Currency Pair</label>
+    <select id="profitPair"></select>
+
+    <label for="profitEntry">Entry Price</label>
+    <input type="number" id="profitEntry" placeholder="e.g. 1900.00" step="0.001" />
+
+    <label for="profitExit">Exit Price</label>
+    <input type="number" id="profitExit" placeholder="e.g. 1910.00" step="0.001" />
+
+    <label for="lotSize">Lot Size</label>
+    <input type="number" id="lotSize" placeholder="e.g. 1.0" step="0.01" />
+
+    <label>Trade Type</label>
+    <select id="tradeType">
+      <option value="long">Long (Buy)</option>
+      <option value="short">Short (Sell)</option>
+    </select>
+
+    <button onclick="calculateProfit()">Calculate Profit</button>
+    <button onclick="resetForm('profitEntry','profitExit','lotSize','profitResult','pipInfo2')">Reset</button>
+    <div class="result" id="profitResult"></div>
+    <div class="pip-info" id="pipInfo2"></div>
+  </div>
+
   <!-- Pip Calculator -->
   <div class="container">
     <h2>Pip Calculator</h2>
@@ -161,25 +249,31 @@
     <div class="pip-info" id="pipInfoCalc"></div>
   </div>
 
-  <!-- Profit Calculator -->
-  <div class="container">
-    <h2>Profit Calculator</h2>
-    <label for="profitPair">Currency Pair</label>
-    <select id="profitPair"></select>
-
-    <label for="profitEntry">Entry Price</label>
-    <input type="number" id="profitEntry" placeholder="e.g. 1900.00" step="0.001" />
-
-    <label for="profitExit">Exit Price</label>
-    <input type="number" id="profitExit" placeholder="e.g. 1910.00" step="0.001" />
-
-    <label for="lotSize">Lot Size</label>
-    <input type="number" id="lotSize" placeholder="e.g. 1.0" step="0.01" />
-
-    <button onclick="calculateProfit()">Calculate Profit</button>
-    <button onclick="resetForm('profitEntry','profitExit','lotSize','profitResult','pipInfo2')">Reset</button>
-    <div class="result" id="profitResult"></div>
-    <div class="pip-info" id="pipInfo2"></div>
+  <!-- World Clock Panel -->
+  <div class="clock-panel open" id="clockPanel">
+    <div class="toggle-btn" onclick="togglePanel()" id="toggleBtn">‹</div>
+    <div class="clock-grid">
+      <div class="clock-card">
+        <canvas id="clock-sydney"></canvas>
+        <div>Sydney</div>
+        <div class="digital-time" id="time-sydney"></div>
+      </div>
+      <div class="clock-card">
+        <canvas id="clock-tokyo"></canvas>
+        <div>Tokyo</div>
+        <div class="digital-time" id="time-tokyo"></div>
+      </div>
+      <div class="clock-card">
+        <canvas id="clock-london"></canvas>
+        <div>London</div>
+        <div class="digital-time" id="time-london"></div>
+      </div>
+      <div class="clock-card">
+        <canvas id="clock-ny"></canvas>
+        <div>New York</div>
+        <div class="digital-time" id="time-ny"></div>
+      </div>
+    </div>
   </div>
 
   <!-- Footer -->
@@ -217,6 +311,8 @@
 
     window.onload = () => {
       ["pair", "pipPair", "profitPair"].forEach(populatePairs);
+      setInterval(updateClocks, 1000);
+      updateClocks();
     };
 
     function getPipSettings(pair) {
@@ -265,6 +361,7 @@
       const exit = parseFloat(document.getElementById("profitExit").value);
       const lot = parseFloat(document.getElementById("lotSize").value);
       const pair = document.getElementById("profitPair").value;
+      const tradeType = document.getElementById("tradeType").value;
 
       if (isNaN(entry) || isNaN(exit) || isNaN(lot)) {
         document.getElementById("profitResult").textContent = "Please enter all values.";
@@ -272,11 +369,18 @@
       }
 
       const { pipSize, pipValue } = getPipSettings(pair);
-      const pipDiff = Math.abs(entry - exit) / pipSize;
-      const profit = pipDiff * pipValue * lot;
-      const direction = exit > entry ? "Profit" : "Loss";
+      const pipDiff = (exit - entry) / pipSize;
+      let profit;
 
-      document.getElementById("profitResult").textContent = `${direction}: $${profit.toFixed(2)} (${pipDiff.toFixed(0)} pips)`;
+      if (tradeType === "long") {
+        profit = pipDiff * pipValue * lot;
+      } else {
+        profit = -pipDiff * pipValue * lot;
+      }
+
+      const direction = profit >= 0 ? "Profit" : "Loss";
+
+      document.getElementById("profitResult").textContent = `${direction}: $${Math.abs(profit).toFixed(2)} (${Math.abs(pipDiff).toFixed(0)} pips)`;
       document.getElementById("pipInfo2").textContent = `Pip Size: ${pipSize}, Pip Value: $${pipValue} per lot`;
     }
 
@@ -287,6 +391,25 @@
         else el.textContent = "";
       });
     }
-  </script>
-</body>
-</html>
+
+    /* Analog + Digital World Clocks */
+    const cities = [
+      { id: "sydney", tz: "Australia/Sydney" },
+      { id: "tokyo", tz: "Asia/Tokyo" },
+      { id: "london", tz: "Europe/London" },
+      { id: "ny", tz: "America/New_York" }
+    ];
+
+    function updateClocks() {
+      cities.forEach(city => {
+        const now = new Date();
+        const local = new Date(now.toLocaleString("en-US", { timeZone: city.tz }));
+
+        // Digital
+        document.getElementById("time-"+city.id).textContent = local.toLocaleTimeString();
+
+        // Analog
+        drawClock("clock-"+city.id, local);
+      });
+    }
+
